--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10"
+  },
   "packageManager": "npm@8.15.1"
 }
