--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "is-ci || husky install"
+    "prepare": "node ./prepare.js"
   },
   "devDependencies": {
     "eslint-config-custom": "*",
     "husky": "^8.0.1",
-    "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "latest",
     "turbo": "latest"
