chore(husky): Add eslint checks in pre-commit hook

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "turbo": "latest"
   },
   "lint-staged": {
+    "**/*.{ts,tsx}": "eslint --fix",
     "**/*": "prettier --write --ignore-unknown"
   },
   "engines": {
